<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_pantalla"
    >




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:paddingTop="50dp"
            android:padding="24dp"
            android:focusable="false"
            android:focusableInTouchMode="false">
            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/chef"
                />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/edit_image"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:paddingStart="25dp"
                android:layout_gravity="center"
                android:text="@string/boton_editar_foto"
                android:textAllCaps="false"
                android:paddingEnd="25dp"
                android:layout_marginBottom="50dp"
                android:fontFamily="@font/cook_book_title"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="30dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registro_nombre_usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre"
                    android:fontFamily="@font/balivia"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="30dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registro_apellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/apellidos"
                    android:fontFamily="@font/balivia"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="30dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registro_correo_usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/unsername"
                    android:fontFamily="@font/balivia"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registro_contraseña_usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:fontFamily="@font/balivia"

                    />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/registro_registrar_usuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"

                    android:layout_alignParentRight="true"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/cook_book_title"
                    android:text="@string/boton_registrar_usuario"


                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancelar"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_toStartOf="@id/registro_registrar_usuario"
                    android:layout_toLeftOf="@id/registro_registrar_usuario"
                    android:fontFamily="@font/balivia"
                    android:text="@string/boton_cancelar"

                    />

            </RelativeLayout>

        </LinearLayout>






</ScrollView>