<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_pantalla">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            android:paddingTop="16dp"
            android:clipChildren="false"
            android:clipToPadding="false"

            >


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:layout_marginBottom="20dp"
                app:srcCompat="@drawable/icono" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:gravity="center"
                android:layout_marginBottom="30dp"
                android:fontFamily="@font/cook_book_title"
                android:textSize="40dp"
                android:textColor="@color/letra"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"

                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_nombre_usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/unsername"
                    android:fontFamily="@font/balivia"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="30dp"

                app:endIconMode="password_toggle"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_contrasena_usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/balivia"
                    android:hint="@string/password"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <Button
                    android:id="@+id/login_iniciar_sesion_usuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"

                    android:fontFamily="@font/cook_book_title"
                    android:text="@string/boton_iniciar_sesion"

                    />

                <Button
                    android:id="@+id/login_registrar_usuario"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"

                    android:layout_toStartOf="@id/login_iniciar_sesion_usuario"
                    android:layout_toLeftOf="@id/login_iniciar_sesion_usuario"
                    android:fontFamily="@font/balivia"
                    android:text="@string/boton_crear_usuario" />


            </RelativeLayout>

        </LinearLayout>


</ScrollView>