<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/white"
    app:cardElevation="0dp"
    app:cardPreventCornerOverlap="true"
    android:layout_margin="15dp"
    app:cardCornerRadius="15dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="horizontal">






        <LinearLayout
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <TextView
                android:id="@+id/lista_id_plato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="ID"
                android:textAlignment="center"
                android:visibility="gone"/>


            <TextView
                android:id="@+id/lista_nombre_plato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre_plato"
                android:textAlignment="center"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/cook_book_title"
                android:autoSizeTextType="uniform"
                android:textSize="15dp"
                android:textColor="@color/letra"/>

            <TextView
                android:id="@+id/lista_categoria_plato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/categoria_plato"
                android:textColor="@color/black"

                android:drawableLeft="@drawable/categorias"
                android:drawablePadding="5dp"
                android:singleLine="true"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/balivia"
                />

            <TextView
                android:id="@+id/lista_area_plato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/area_plato"
                android:textColor="@color/black"


                android:drawableLeft="@drawable/bandera"
                android:drawablePadding="5dp"
                android:singleLine="true"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/balivia"


                />

            <Button
                android:id="@+id/boton_lista_detalle_plato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/boton_lista_plato"
                android:textAlignment="center"
                android:fontFamily="@font/cook_book_title"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >

            <ImageView


                android:id="@+id/lista_imagen_plato"

                android:layout_width="match_parent"
                tools:srcCompat="@tools:sample/backgrounds/scenic"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"

                android:background="@android:color/transparent"
                android:scaleType="centerCrop"
                />
        </LinearLayout>


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>